--- a/Client/src/app/create-cat/create-cat.component.html
+++ b/Client/src/app/create-cat/create-cat.component.html
@@ -3,14 +3,14 @@
     <form [formGroup]='catForm' (ngSubmit)='create()'>
         <div class="mb-3">
             <label class="form-label">ImageUrl</label>
-            <input type="text" class="form-control" formControlName='ImageUrl'>
+            <input type="text" class="form-control" formControlName='imageUrl'>
         </div>
         <ng-container *ngIf='imageUrl?.touched && imageUrl?.errors'>
             <p *ngIf='imageUrl?.errors?.required'> Image is required</p>
         </ng-container>
         <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Description</label>
-            <textarea class="form-control" formControlName='Description'></textarea>
+            <textarea class="form-control" formControlName='description'></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Create</button>
     </form>
