--- a/Client/src/app/register/register.component.html
+++ b/Client/src/app/register/register.component.html
@@ -1,6 +1,7 @@
 <div>
     <div class="col-md-4"></div>
-    <div class="container col-md-4">
+    <div class="formContainer  container col-md-4">
+
         <form [formGroup]='form' (ngSubmit)='register()'>
             <ng-container *ngIf="errorMessage">
                 {{errorMessage}}
@@ -34,6 +35,7 @@
             </ng-container>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
+
     </div>
     <div class="col-md-4"></div>
 </div>
