--- a/Client/src/styles.css
+++ b/Client/src/styles.css
@@ -2,3 +2,11 @@ body {
     width: 1390px;
     margin: 0 auto;
 }
+
+.formContainer {
+    border: 1px solid black;
+    background: beige;
+    margin-top: 30px;
+    padding: 15px;
+    border-radius: 7px;
+}
