--- a/Client/src/app/all-cats/all-cats.component.html
+++ b/Client/src/app/all-cats/all-cats.component.html
@@ -1,1 +1,11 @@
-<p>all-cats works!</p>
+<div class="card-group">
+    <div class='col-md-3' *ngFor="let cat of cats">
+        <div class=" card">
+            <img class="card-img-top" [src]='cat.imageUrl' alt="Card image cap">
+            <div class="card-body">
+                <p class="card-text">{{cat.description}}</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+        </div>
+    </div>
+</div>
