--- a/Client/src/app/header/header.component.html
+++ b/Client/src/app/header/header.component.html
@@ -16,7 +16,7 @@
                     <a class="nav-link" routerLink='create'>Create Cat</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">All Cats</a>
+                    <a class="nav-link" routerLink='all'>All Cats</a>
                 </li>
             </ng-container>
             <!-- <li class="nav-item dropdown">
