--- a/Client/src/app/all-cats/all-cats.component.html
+++ b/Client/src/app/all-cats/all-cats.component.html
@@ -5,6 +5,7 @@
             <div class="card-body">
                 <p class="card-text">{{cat.description}}</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <button class='btn btn-primary' routerLink='{{cat.id}}'>Show Details</button>
             </div>
         </div>
     </div>
