--- a/Client/src/app/all-cats/all-cats.component.html
+++ b/Client/src/app/all-cats/all-cats.component.html
@@ -6,6 +6,7 @@
                 <p class="card-text">{{cat.description}}</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 <button class='btn btn-primary' routerLink='{{cat.id}}'>Show Details</button>
+                <button class='btn btn-danger' (click)='delete(cat.id)'>Delete</button>
             </div>
         </div>
     </div>
